@@ -882,6 +882,10 @@
         comment = "Miscellanous text formating and translation engine related help"
     [/entry]
     [entry]
+        name = "Yurii Chernyi (Crab)"
+        email = "terraninfo_AT_terraninfo.net"
+    [/entry]
+    [entry]
         name = "Zas"
     [/entry]
 [/about]
